# todo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
arch-linux/: PKGBUILD
src/: cl.rs  file.rs  main.rs  task.rs
tasks/: Cargo.toml
tasks/src/: file.rs  lib.rs  merge.rs  task.rs
todo/: Cargo.toml
todo/src/: cl.rs  main.rs
todo/src/menu/: app.rs  mod.rs  render.rs  state.rs  update.rs
