[workspace]
members = [
    "tasks",
    "todo",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock"] }
clap = { version = "4.3.22", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
console = { version = "0.15.7", default-features = false }
dialoguer = { version = "0.10.4", default-features = false }
fzf-wrapped = { version = "0.1.3", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.20", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
nix = { version = "0.27.1", default-features = false, features = ["signal"] }
notify = { version = "6.1.1", default-features = false }
regex = { version = "1.9.3", default-features = false, features = ["std", "unicode"] }
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "stderr"] }
strum = { version = "0.25.0", default-features = false, features = ["std", "derive"] }
tempfile = { version = "3.8.0", default-features = false }
wait-timeout = { version = "0.2.0", default-features = false }
zstd = { version = "0.13.0", default-features = false, features = ["fat-lto", "pkg-config"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
