[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true  }
chrono = { workspace = true }
console = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
