[package]
name = "tasks"
version = "0.1.0"
rust-version = "1.86"
edition = "2024"

[dependencies]
anyhow = { workspace = true  }
chrono = { workspace = true }
console = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
itertools = { workspace = true }
simple_logger = { workspace = true }
