[package]
name = "todo"
description = "todo.txt terminal frontend"
version = "0.1.0"
rust-version = "1.86"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
fzf-wrapped = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
notify-rust = { workspace = true }
simple_logger = { workspace = true }
tasks = { path = "../tasks" }
wait-timeout = { workspace = true }

[lints]
workspace = true
