[package]
name = "todo"
description = "todo.txt terminal frontend"
version = "0.1.0"
rust-version = "1.87"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
fuzzy-matcher = { workspace = true }
log = { workspace = true }
notify-rust = { workspace = true }
ratatui = { workspace = true }
simple_logger = { workspace = true }
strum = { workspace = true }
tasks = { path = "../tasks" }

[lints]
workspace = true
